<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content"

    tools:context=".MainActivity">
<android.support.v7.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_new_7"
        android:orientation="vertical"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/app_name"
            android:gravity="center"
            android:background="@drawable/rounded_new_5"
            android:padding="20dip"
            android:layout_gravity="center"
            android:textSize="15dip"
            android:textColor="@color/black"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="200dip"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_new_5"
        android:text="@string/choosearea"
        android:id="@+id/alertText"
        android:padding="20dip"
        android:layout_gravity="center"
        android:textSize="15dip"
        android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"></LinearLayout>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:text="@string/ok"
        android:id="@+id/alertOk"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/rounded_btn_7"
        />
    </LinearLayout>
</android.support.v7.widget.CardView>
</LinearLayout>