<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:background="@color/settingBackground">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linear1"
    android:weightSum="1">
    <android.support.v7.widget.SwitchCompat
        android:layout_width="0dip"
        android:layout_weight="0.2"
        app:theme="@style/Theme.MyTheme"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:buttonTint="@color/colorPrimaryDark"
        android:checked="true"
        android:focusable="false"
        android:clickable="false"
        android:id="@+id/radio1"
        android:textStyle="bold"
        android:padding="10dip"
        />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/text1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_weight="0.8"
            android:text="@string/allnotoff"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear2"
        android:weightSum="1">
        <android.support.v7.widget.SwitchCompat
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:focusable="false"
            android:clickable="false"
            app:theme="@style/Theme.MyTheme"
            android:buttonTint="@color/colorPrimaryDark"
            android:textColor="@android:color/black"
            android:id="@+id/radio2"
            android:checked="true"
            android:textStyle="bold"
            android:padding="10dip"

            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:id="@+id/text2"
            android:layout_weight="0.8"
            android:text="@string/supernotoff"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear3"
        android:weightSum="1">
        <android.support.v7.widget.SwitchCompat
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            app:theme="@style/Theme.MyTheme"
            android:focusable="false"
            android:clickable="false"
            android:buttonTint="@color/colorPrimaryDark"
            android:textColor="@android:color/black"
            android:id="@+id/radio3"
            android:checked="true"
            android:textStyle="bold"
            android:padding="10dip"

            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/text3"
            android:textStyle="bold"
            android:layout_weight="0.8"
            android:text="@string/resnotoff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear4"
        android:layout_marginBottom="10dip"
        android:weightSum="1">
        <android.support.v7.widget.SwitchCompat
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:focusable="false"
            android:clickable="false"
            app:theme="@style/Theme.MyTheme"
            android:buttonTint="@color/colorPrimaryDark"
            android:textColor="@android:color/black"
            android:id="@+id/radio4"
            android:checked="true"
            android:textStyle="bold"
            android:padding="10dip"

            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/text4"
            android:textStyle="bold"
            android:layout_weight="0.8"
            android:text="@string/collnotoff"/>
    </LinearLayout>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pubWhatsapp"
        android:padding="20dip"
        android:id="@+id/wasapp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dip"
        android:background="@drawable/rounded_btn_2"
        android:textColor="@color/textColor"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactUs"
        android:id="@+id/contactus"
        android:gravity="center"
        android:padding="20dip"
        android:textStyle="bold"
        android:background="@drawable/rounded_btn_2"
        android:textColor="@color/textColor"/>

</LinearLayout>