<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
<android.support.v7.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >
    <RelativeLayout
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_new_7"
        android:orientation="vertical"
        >
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:text="@string/app_name"
            android:id="@+id/list_head"
            android:gravity="center"
            android:background="@drawable/rounded_new_6"
            android:padding="20dip"
            android:layout_gravity="center"
            android:textSize="15dip"
            android:textColor="@android:color/white"/>
    <android.support.v7.app.AlertController.RecycleListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_head"
        android:id="@+id/list_alert"
        ></android.support.v7.app.AlertController.RecycleListView>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:weightSum="1"
       android:id="@+id/linear_alert"
       android:orientation="horizontal"
       >
       <android.support.v7.widget.AppCompatButton
           android:layout_width="0dip"
           android:layout_weight="0.5"
           android:layout_height="40dip"
           android:text="@string/cancel"
           android:id="@+id/alertCancel"
           android:textColor="@color/black"
           android:background="@drawable/rounded_new_8"
           />
       <android.support.v7.widget.AppCompatButton
           android:layout_width="0dip"
           android:layout_weight="0.5"
           android:layout_height="40dip"
           android:text="@string/ok"
           android:id="@+id/alertOkay"
           android:textColor="@android:color/white"
           android:background="@drawable/rounded_new_9"
           />
   </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>
</LinearLayout>